some basic work done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Prologue by HTML5 UP</title>
+    <title>Robert Bronson</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -26,8 +26,8 @@
           <span class="image avatar48"
             ><img src="images/avatar.jpg" alt=""
           /></span>
-          <h1 id="title">Jane Doe</h1>
-          <p>Hyperspace Engineer</p>
+          <h1 id="title">Robert Bronson</h1>
+          <p>TIE Fighter Pilot</p>
         </div>
 
         <!-- Nav -->
@@ -96,19 +96,22 @@
         <div class="container">
           <header>
             <h2 class="alt">
-              Hi! I'm <strong>Prologue</strong>, a
-              <a href="http://html5up.net/license">free</a> responsive<br />
-              site template designed by
-              <a href="http://html5up.net">HTML5 UP</a>.
+              Hi! I'm <strong>Rob</strong>, a software developer with Amazon Web
+              Services.
             </h2>
             <p>
-              Ligula scelerisque justo sem accumsan diam quis<br />
-              vitae natoque dictum sollicitudin elementum.
+              Full stack web developer; budding SDE. I am driven to contribute
+              to the many technologies that are improving the quality of life
+              across the world. I love the challenge of creating things, and the
+              mystery and reward of troubleshooting and debugging. My military
+              background gives me the drive and grit to do what it takes to get
+              the job done. HTML, CSS, JavaScript, JQuery, Python, Pyramid,
+              Django, Postgres, AWS, AWS Lambda, Node
             </p>
           </header>
 
           <footer>
-            <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+            <a href="#portfolio" class="button scrolly">My Portfolio</a>
           </footer>
         </div>
       </section>
