added video background

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,9 @@
     <div id="main">
       <!-- Intro -->
       <section id="top" class="one dark cover">
+        <video autoplay loop>
+          <source src="./images/Network - 12716.mp4" type="video/mp4" />
+        </video>
         <div class="container">
           <header>
             <h2 class="alt">
